# muslib

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
aufic/: aufiApev2.h  aufiApev2Parse.c  aufiBase.c  aufiBase.h  aufiChunk.c  aufiChunk.h  aufiFlac.h  aufiFlacFrame.c  aufiFlacFrame.h  aufiFlacFrameParse.c  aufiFlacMeta.h  aufiFlacMetaParse.c  aufiFlacParse.c  aufiId3v1.h  aufiId3v1Parse.c  aufiId3v2.h  aufiId3v2Parse.c  aufiLyrics3v2.h  aufiLyrics3v2Parse.c  aufiMp3.h  aufiMp3Parse.c  aufiMp4.h  aufiMp4Parse.c  aufiMpeg1AudFrame.c  aufiMpeg1AudFrame.h  aufiMpeg1AudFrameParse.c  aufiParse.c  aufiParse.h  aufiPy.c  aufiPy.h  aufiPyChunk.c  bitutil.h  crc.c  crc.h  crpy.h  trash.c  u8c.c  u8c.h  u8cGenr.c  util.h  (+1 more)
buildr/: buildlib.py  butil.py  mypplib.py  pplib.py  testbackend.py  trash.py  util.py
src/aufi_xmzt/: apev2Base.py  aufiBase.py  flacMetaBase.py  id3v2Base.py  mpeg1AudFrameBase.py
src/muslib_xmzt/: aufiApev2.py  aufiFlac.py  aufiFlacFrame.py  aufiFlacMeta.py  aufiId3v1.py  aufiId3v2.py  aufiLyrics3v2.py  aufiMp3.py  aufiMp4.py  aufiMpeg1AudFrame.py  aufiWav.py  dblib.py  incon.py  muslib.py  other.py  scanlib.py  taglib.py  trash.py  util.py
test/: mytest.c
