[build-system]
#requires = ["setuptools", "pylib0-xmzt", "crpy-xmzt"]
requires = ["setuptools"]
build-backend = "testbackend"
backend-path = ["buildr"]

[project]
name = "muslib-xmzt"
version = "0.0.1"
authors = [ 
  { name="xmzt", email="117325034+xmzt@users.noreply.github.com" }
]
description = "Music library manager"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
]
#dependencies = [ "pylib0-xmzt" ]

[project.urls]
"Homepage" = "https://github.com/xmzt/muslib"
